# xsd-convert

./: .gitignore  Cargo.toml  Makefile  README.md  Trunk.toml  index.html
.github/workflows/: cicd.yml
public/: styles.scss
public/css/: prism.css
public/js/: prism.js
src/: lib.rs  main.rs
src/components/: file_input.rs  mod.rs  switch.rs  textarea.rs  top_bar.rs  transform_controls.rs
src/pages/: home.rs
src/transform/: transform.rs
