[package]
name = "xsd-convert"
version = "0.1.0"
edition = "2021"
authors = ["jeroenflvr <jeroen@flexworks.eu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
yaxp-core = "0.1.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlInputElement", "FileReader", "FileList", "File", "Navigator", "Clipboard"] }
wasm-bindgen-futures = "0.4.50"
gloo-timers = { version = "0.3.0", features = ["futures"] }

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
